--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
@@ -6,15 +7,34 @@
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
-<a href="https://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
-<br>
-<a href="https://www.wp.pl" target="strony">Portal WP</a>
+  <marquee bgcolor="red"> Dziubich</marquee>
+  Linki do zadań
+  <ol type="1">
+    <li><a href="Dziu_z2.html" target="strony">Zadanie2</a></li>
+    <li><a href="Dziu_z3.html" target="strony">Zadanie3</a></li>
+    <li><a href="Dziu_z4.html" target="strony">Zadanie4</a></li>
+    <li><a href="Dziu_z5_1.html" target="strony">Zadanie5-importowane</a></li>
+     <li><a href="Dziu_z5_2.html" target="strony">Zadanie5-zewnętrzne</a></li>
+     <li><a href="Dziu_z5_3.html" target="strony">Zadanie5-wewnętrzne</a></li>
+     <li><a href="Dziu_z5_4.html" target="strony">Zadanie5-liniowy</a></li>
+    <li><a href="Dziu_z6.html" target="strony">Zadanie6</a></li>
+  </ol>
+
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
 <td width=18% align=center><a href="start.html" target="strony">Start</a>
+  <br>
+  Linki do kodów zadań
+  <ol type="1">
+    <li><a href="kod_z5_1_Dziu.html" target="strony"> z5_kod-importowany</a></li>
+    <li><a href="kod_z5_2_Dziu.html" target="strony"> z5_kod-zewnętrzne</a></li>
+    <li><a href="kod_z5_3_Dziu.html" target="strony"> z5_kod-wewnętrzne</a></li>
+    <li><a href="kod_z5_4_Dziu.html" target="strony"> z5_kod-liniowy</a></li>
+    <li><a href="kod_z6_Dziu.html" target="strony"> z6_kod</a></li>
 </td>
 </tr>
 </table>
+  <!--Jakub Dziubich 06-03-2023-->
 </body>
 </html>
