--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <marquee bgcolor="red"> Dziubich</marquee>
   Linki do zadań
   <ol type="1">
-    <li><a href="Dziu_z2.html" target="strony">Zadanie2</a></li>
-    <li><a href="Dziu_z3.html" target="strony">Zadanie3</a></li>
-    <li><a href="Dziu_z4.html" target="strony">Zadanie4</a></li>
-    <li><a href="Dziu_z5_1.html" target="strony">Zadanie5-importowane</a></li>
-     <li><a href="Dziu_z5_2.html" target="strony">Zadanie5-zewnętrzne</a></li>
-     <li><a href="Dziu_z5_3.html" target="strony">Zadanie5-wewnętrzne</a></li>
-     <li><a href="Dziu_z5_4.html" target="strony">Zadanie5-liniowy</a></li>
-    <li><a href="Dziu_z6.html" target="strony">Zadanie6</a></li>
+    <li><a href="VOIC_z2.html" target="strony">Zadanie2</a></li>
+    <li><a href="VOIC_z3.html" target="strony">Zadanie3</a></li>
+    <li><a href="VOIC_z4.html" target="strony">Zadanie4</a></li>
+    <li><a href="VOIC_z5_1.html" target="strony">Zadanie5-importowane</a></li>
+     <li><a href="VOIC_z5_2.html" target="strony">Zadanie5-zewnętrzne</a></li>
+     <li><a href="VOIC_z5_3.html" target="strony">Zadanie5-wewnętrzne</a></li>
+     <li><a href="VOIC_z5_4.html" target="strony">Zadanie5-liniowy</a></li>
+    <li><a href="VOIC_z6.html" target="strony">Zadanie6</a></li>
   </ol>
 
 </td>
@@ -35,6 +35,6 @@
 </td>
 </tr>
 </table>
-  <!--Jakub Dziubich 06-03-2023-->
+  <!--ANDRII VOICHUK SLAVA UKRAINI-->
 </body>
 </html>
