--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <table width=95% border="1" align="center">
 <tr>
 <td width=18% align=center>
-  <marquee bgcolor="red"> Dziubich</marquee>
+  <marquee bgcolor="red"> VOICHUK</marquee>
   Linki do zadań
   <ol type="1">
     <li><a href="VOIC_z2.html" target="strony">Zadanie2</a></li>
