--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <br>
   Linki do kodów zadań
   <ol type="1">
-    <li><a href="kod_z5_1_Dziu.html" target="strony"> z5_kod-importowany</a></li>
-    <li><a href="kod_z5_2_Dziu.html" target="strony"> z5_kod-zewnętrzne</a></li>
-    <li><a href="kod_z5_3_Dziu.html" target="strony"> z5_kod-wewnętrzne</a></li>
-    <li><a href="kod_z5_4_Dziu.html" target="strony"> z5_kod-liniowy</a></li>
-    <li><a href="kod_z6_Dziu.html" target="strony"> z6_kod</a></li>
+    <li><a href="kod_z5_1_VOIC.html" target="strony"> z5_kod-importowany</a></li>
+    <li><a href="kod_z5_2_VOIC.html" target="strony"> z5_kod-zewnętrzne</a></li>
+    <li><a href="kod_z5_3_VOIC.html" target="strony"> z5_kod-wewnętrzne</a></li>
+    <li><a href="kod_z5_4_VOIC.html" target="strony"> z5_kod-liniowy</a></li>
+    <li><a href="kod_z6_VOIC.html" target="strony"> z6_kod</a></li>
 </td>
 </tr>
 </table>
-  <!--ANDRII VOICHUK SLAVA UKRAINI-->
+  <!--ANDRII VOICHUK SLAVA UKRAINI i NIECH ŻYJE NIEPODLEGLA POLSKA-->
 </body>
 </html>
