--- a/kod_z6_VOIC.html
+++ b/kod_z6_VOIC.html
@@ -17,12 +17,12 @@
             <LINK href="VOIC_z6.css" rel="stylesheet" type="text/CSS">
         </head>
         <body>
-            <p> :) Uśmiechnięta buźka </p>
-            :( Smutna buźka
-            <p> :o Zaskoczenie </p>
-            :P Wytknięty języczek
-            <p> -_- Podejżliwość </p>
-            ;) Oczko
+           <p> :) Uśmiechnięta buźia </p>
+            :( Smutna buźia
+            <p> ^_^ Super </p>
+            ['-'] Serio
+            <p> 0_0 Jestem w szoku </p>
+            :D Ha-Ha-Ha
         
         </body>
     </html>
