--- a/VOIC_z5_1.html
+++ b/VOIC_z5_1.html
@@ -6,7 +6,7 @@
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 			<!-- zewnetrzne -->
 			<style>
-				@import url("Dziu_z5_1.css ");
+				@import url("VOIC_z5_1.css ");
 			</style>
         </head>
         <body style="text-align:center;">
