--- a/VOIC_z5_1.html
+++ b/VOIC_z5_1.html
@@ -1,15 +1,16 @@
-
 <!DOCTYPE html>
     <html>
         <head>
 		<title> Styl zewnetrzny </title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-			<!-- zewnetrzne -->
+			<!--zewnetrzne-->
 			<style>
 				@import url("VOIC_z5_1.css ");
 			</style>
         </head>
         <body style="text-align:center;">
-			<p> Voichuk <br> Title zmienia nazwę karty HTML </p>
+			<p> Dziubich <br> Title zmienia nazwę karty HTML </p>
+
+         
         </body>
-    </html>
+    </html
