--- a/VOIC_z5_1.html
+++ b/VOIC_z5_1.html
@@ -6,7 +6,11 @@
 			<!--zewnetrzne-->
 			<style>
 				@import url("VOIC_z5_1.css ");
-			</style>
+				p{
+				color: #00FFFF;
+				font-size: 58px;
+				}
+		</style>
         </head>
         <body style="text-align:center;">
 			<p> Dziubich <br> Title zmienia nazwę karty HTML </p>
