--- a/VOIC_z5_1.html
+++ b/VOIC_z5_1.html
@@ -7,13 +7,13 @@
 			<style>
 				@import url("VOIC_z5_1.css ");
 				p{
-				color: #00FFFF;
-				font-size: 58px;
+				color: # FFFF00;
+				font-size: 7px;
 				}
 		</style>
         </head>
         <body style="text-align:center;">
-			<p> Dziubich <br> Title zmienia nazwę karty HTML </p>
+			<p> Voichuk <br> Title zmienia nazwę karty HTML </p>
 
          
         </body>
