--- a/VOIC_z5_2.html
+++ b/VOIC_z5_2.html
@@ -4,7 +4,13 @@
            <title> Styl zewnetrzny </title>
 			<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 			<!-- wewnetrzny -->
-			<LINK href="Dziu_z5_2.css" rel="stylesheet" type="text/CSS">
+		<style>
+				p{
+				color: # 00FF00;
+				font-size: 30px;
+				}
+		</style>
+			<LINK href="VOIC_z5_2.css" rel="stylesheet" type="text/CSS">
         </head>
         <body style="text-align:center;">
 			<p> Voichuk <br> Pod koniec 1996 roku było wydano pierwszą oficjalną dokumentację o CSS </p>
