--- a/VOIC_z6.html
+++ b/VOIC_z6.html
@@ -6,6 +6,7 @@
             <LINK href="VOIC_z6.css" rel="stylesheet" type="text/CSS">
         </head>
         <body>
+            
             <p> :) Uśmiechnięta buźia </p>
             :( Smutna buźia
             <p> ^_^ Super </p>
@@ -13,4 +14,12 @@
             <p> 0_0 Jestem w szoku </p>
             :D Ha-Ha-Ha 
         </body>
+            body {
+            color:blue;
+            font-size: 30pt;
+            }
+            p {
+            color:green;
+            font-size:20pt;
+            }
     </html>
