--- a/VOIC_z6.html
+++ b/VOIC_z6.html
@@ -14,12 +14,12 @@
             <p> 0_0 Jestem w szoku </p>
             :D Ha-Ha-Ha 
         </body>
-            body {
+            <body> {
             color:blue;
             font-size: 30pt;
-            }
-            p {
+                } </body>
+           <p> {
             color:green;
             font-size:20pt;
-            }
+               } </p>
     </html>
