--- a/VOIC_z5_3.html
+++ b/VOIC_z5_3.html
@@ -12,6 +12,6 @@
 			</style>
         </head>
         <body style="text-align:center;">
-			<p> Voichuk <br> Najpierwsze HTML wydanie powstało w 1993 roku </p>
+			<p> Voichuk <br> Wydanie pierwszego HTML powstało w 1993 roku </p>
         </body>
     </html>
