kod_z5_4_VOIC.html

--- a/kod_z5_4_VOIC.html
+++ b/kod_z5_4_VOIC.html
@@ -17,9 +17,9 @@
 			<!-- liniowy -->
         </head>
         <body style="text-align:center;">
-			<p style="color: #00FFFF; font-size: 38px;"> Voichuk <br> W html są listy numerowane i nienumerowane </p>        
+			<p style="color: #00FFFF; font-size: 38px;"> Voichuk <br> W html sa listy numerowane i nienumerowane </p>
         </body>
     </html>
-			</textarea>						          
+			</textarea>
         </body>
-    </html>
+    </html
