--- a/VOIC_z15.html
+++ b/VOIC_z15.html
@@ -5,11 +5,11 @@
     </head>
 
         <body>
-                <p>:O zaskoczenie</p>
-                :D zadowolona buźka
-                <p>>:( złość</p>
-                :* buziak
-                <p>:P wytknięty język</p>
-                :'( smutek z łezką
+               <p> :) Uśmiechnięta buźia </p>
+            :( Smutna buźia
+            <p> ^_^ Super </p>
+            ['-'] Serio
+            <p> 0_0 Jestem w szoku </p>
+            :D Ha-Ha-Ha 
         </body>
 </html>
