--- a/VOIC_z13.html
+++ b/VOIC_z13.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link href="kozi_z13.css" rel="stylesheet" type="text/CSS">
+        <link href="kod_z13_VOIC.css" rel="stylesheet" type="text/CSS">
     </head>
-                            <!--Norbert Kozikowski, 15.05.2023-->
+                
         <body>                          
                <p> :) Uśmiechnięta buźia </p>
             :( Smutna buźia
