--- a/VOIC_z15.html
+++ b/VOIC_z15.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <link href="kozi_z15.css" rel="stylesheet" type="text/CSS">
+        <link href="kod_z15_VOIC.css" rel="stylesheet" type="text/CSS">
     </head>
 
         <body>
