--- a/VOIC_z33.html
+++ b/VOIC_z33.html
@@ -31,7 +31,7 @@ background : rgb(100,100,100);
 </style>
 </head>
 <body>
-<h1>tu Voichuk</h1>
+<h1>Voichuk</h1>
 <h2>Andrii</h2>
 	<h3>2K/2 26.05.2023</h3>
 </body>
