--- a/VOIC_z34.html
+++ b/VOIC_z34.html
@@ -14,15 +14,15 @@
         </style>
     </head>
         <body>
-            <h1><u><center>Kozikowski</center></u>margin-left: 535px; width: 300pt; height: 3cm; background:rgb(255, 69, 0); 
+            <h1><u><center>Voichuk</center></u>margin-left: 535px; width: 300pt; height: 3cm; background:rgb(255, 69, 0); 
                 border-style: inset; border-top-color: silver; border-bottom-color: red; border-left-color: lime; border-right-color: navy;
             </h1>
 
-            <h2><u><center>Norbert</center></u>width: 400pt; height: 4cm;<br> background:rgb(255, 140, 0);<br> 
+            <h2><u><center>Andrii</center></u>width: 400pt; height: 4cm;<br> background:rgb(255, 140, 0);<br> 
                 border-color: maroon; border-style: ridge;
             </h2>
 
-            <h3><u><center>12 2K</center></u>
+            <h3><u><center>32 2K</center></u>
                 margin-left: 950px; width: 200pt; height: 2cm; background:rgb(255, 165, 0); border-color: red; border-style: outset;
             </h3>
         </body>
