--- a/VOIC_z34.html
+++ b/VOIC_z34.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link href="zad34_VOIC.css" rel="stylesheet" type="text/CSS">
+        <link href="zadanie34_VOIC.css" rel="stylesheet" type="text/CSS">
         <style>
             body {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 
