--- a/VOIC_z34.html
+++ b/VOIC_z34.html
@@ -6,16 +6,14 @@
             body {font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;}
 
             h1 {font-size: 17px;margin-left: 535px;width: 250pt; height: 2,5cm; background:rgb(255, 69, 0); border-style: inset;
-                border-top-color:silver; border-bottom-color: red; border-left-color: lime; border-right-color: navy;} 
-            /*Odcienie pomarańczowego, ramka góra 9, dół 11, lewo 15, prawo 13, styl 2*/
+                border-top-color:red; border-bottom-color: pink; border-left-color: lime; border-right-color: navy;} 
 
-            h2{width: 400pt; height: 4cm; background:rgb(255, 140, 0); border-color: maroon; border-style: ridge;} 
-            /*Kolor ramki 4, styl 6*/
+            h2{width: 400pt; height: 4cm; background:rgb(255, 140, 0); border-color: maroon; border-style: ridge;}
         </style>
     </head>
         <body>
             <h1><u><center>Voichuk</center></u>margin-left: 535px; width: 300pt; height: 3cm; background:rgb(255, 69, 0); 
-                border-style: inset; border-top-color: silver; border-bottom-color: red; border-left-color: lime; border-right-color: navy;
+                border-style: inset; border-top-color: red; border-bottom-color: pink; border-left-color: lime; border-right-color: navy;
             </h1>
 
             <h2><u><center>Andrii</center></u>width: 400pt; height: 4cm;<br> background:rgb(255, 140, 0);<br> 
