--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
     <li><a href="VOIC_z35.html" target="strony">Zadanie35</a> </li>
     
     <li><a href="VOIC_z36.html" target="strony">Zadanie36</a> </li>
+
+    <li><a href="VOIC_z74.html" target="strony"> <p> Zadanie74</a></li> 
+		
+    <li><a href="VOIC_z75.html" target="strony"> <p> Zadanie75</a></li> 
+		
+    <li><a href="VOIC_z76.html" target="strony"> <p> Zadanie76</a></li> 
+		
+    <li><a href="VOIC_z77.html" target="strony"> <p> Zadanie77</a></li> 
+		
+    <li><a href="VOIC_z78.html" target="strony"> <p> Zadanie78</a></li>
     
   </ol>
 
