--- a/VOIC_z75.html
+++ b/VOIC_z75.html
@@ -16,12 +16,12 @@
 <body>
    <table>
       <tr>
-         <td> Komórka 1 Ejsmont </td>
-         <td> Komórka 2 Ejsmont </td>
+         <td> Komórka 1 Voichuk </td>
+         <td> Komórka 2 Voichuk </td>
       </tr>
       <tr> 
-         <td> Komórka 3 Ejsmont </td>
-         <td> Komórka 4 Ejsmont </td>
+         <td> Komórka 3 Voichuk </td>
+         <td> Komórka 4 Voichuk </td>
       </tr>
    </table>
 </body>
